--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pocketful Joy LLC - Professional photo booth rentals for weddings, parties, and corporate events in Pottstown, PA. Where every memory is a pocketful of joy!">
-    <title>Pocketful Joy | Photo Booth Rentals Pottstown, PA</title>
+    <title>Pocketful of Joy | Photo Booth Rentals Pottstown, PA</title>
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
