--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pocketful Joy LLC - Professional photo booth rentals for weddings, parties, and corporate events in Pottstown, PA. Where every memory is a pocketful of joy!">
+    <meta name="description" content="Pocketful of Joy LLC - Professional photo booth rentals for weddings, parties, and corporate events in Pottstown, PA. Where every memory is a pocketful of joy!">
     <title>Pocketful of Joy | Photo Booth Rentals Pottstown, PA</title>
 
     <!-- Tailwind CSS -->
@@ -82,7 +82,7 @@
         <div class="max-w-7xl mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold text-brand-pink">
-                    Pocketful Joy
+                    Pocketful of Joy
                 </a>
 
                 <div class="hidden md:flex items-center space-x-8">
@@ -275,7 +275,7 @@
                 <div class="bg-gray-50 rounded-3xl p-8 shadow-md hover:shadow-xl transition">
                     <div class="text-brand-yellow text-4xl mb-4">★★★★★</div>
                     <p class="text-gray-700 italic mb-6 leading-relaxed">
-                        "We hired Pocketful Joy for our daughter's Sweet 16 and it was amazing! Professional setup and excellent quality."
+                        "We hired Pocketful of Joy for our daughter's Sweet 16 and it was amazing! Professional setup and excellent quality."
                     </p>
                     <p class="font-bold text-gray-900">Jennifer M.</p>
                     <p class="text-sm text-gray-500">Birthday Party</p>
@@ -299,7 +299,7 @@
         <div class="max-w-7xl mx-auto px-6">
             <div class="grid md:grid-cols-3 gap-12 mb-12">
                 <div>
-                    <h3 class="text-2xl font-bold text-brand-pink mb-4">Pocketful Joy</h3>
+                    <h3 class="text-2xl font-bold text-brand-pink mb-4">Pocketful of Joy</h3>
                     <p class="text-gray-400 leading-relaxed mb-6">
                         Professional photo booth rentals bringing joy and memories to events throughout Pottstown, PA.
                     </p>
@@ -335,7 +335,7 @@
             </div>
 
             <div class="border-t border-gray-800 pt-8 text-center text-gray-500">
-                <p>&copy; 2025 Pocketful Joy LLC. All rights reserved.</p>
+                <p>&copy; 2025 Pocketful of Joy LLC. All rights reserved.</p>
             </div>
         </div>
     </footer>
