--- a/contact.html
+++ b/contact.html
@@ -251,27 +251,17 @@
                         ====================================
                         -->
 
-                        <!-- REPLACE THIS DIV WITH YOUR GOOGLE FORM IFRAME -->
-                        <div class="bg-gradient-to-br from-light-pink/50 to-pink-100/50 p-8 rounded-2xl text-center border-3 border-dashed border-brand-pink/30">
-                            <div class="text-6xl mb-4">📋</div>
-                            <h4 class="text-2xl font-bold text-gray-900 mb-3">Google Form Goes Here</h4>
-                            <p class="text-gray-600 mb-4 leading-relaxed">
-                                Follow the instructions in the code comments to create and embed your Google Form.
-                            </p>
-                            <p class="text-gray-500 text-sm italic mb-6">
-                                Once you add your Google Form iframe code, this placeholder will be replaced with your actual form.
-                            </p>
-                            <div class="pt-4 border-t border-brand-pink/20">
-                                <p class="text-gray-900 font-semibold mb-3">For now, contact us directly:</p>
-                                <div class="space-y-2">
-                                    <a href="tel:6104067666" class="block text-brand-pink font-bold text-lg hover:underline">
-                                        📞 (610) 406-7666
-                                    </a>
-                                    <a href="mailto:pocketfulofjoypb@gmail.com" class="block text-brand-pink font-bold hover:underline break-all">
-                                        ✉️ pocketfulofjoypb@gmail.com
-                                    </a>
-                                </div>
-                            </div>
+                        <!-- Google Form Embed -->
+                        <div class="relative" style="width: 100%; overflow: hidden;">
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeS1I1WDFlYYuFDld5YjXmciE8aq9sqyiaTjUhuL9I7PWkznw/viewform?embedded=true"
+                                    width="100%"
+                                    height="956"
+                                    frameborder="0"
+                                    marginheight="0"
+                                    marginwidth="0"
+                                    class="rounded-2xl">
+                                Loading…
+                            </iframe>
                         </div>
                     </div>
                 </div>
